gateway/gateway-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: auth
              domains:
                - auth.daniel.hail.is
              routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: auth
            - name: batch
              domains:
                - batch.daniel.hail.is
              routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: batch
            - name: batch-driver
              domains:
                - batch-driver.daniel.hail.is
              routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: batch-driver
            - name: grafana
              domains:
                - grafana.daniel.hail.is
              routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: grafana
            - name: prometheus
              domains:
                - prometheus.daniel.hail.is
              routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: prometheus
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: /etc/letsencrypt/fullchain.pem
              private_key:
                filename: /etc/letsencrypt/privkey.pem
  clusters:
  - name: auth
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: auth
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: auth.default.svc.cluster.local
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: /ssl-config/gateway-cert.pem
            private_key:
              filename: /ssl-config/gateway-key.pem
          validation_context:
            trusted_ca:
              filename: /ssl-config/gateway-outgoing.pem
  - name: batch
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: batch
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: batch.default.svc.cluster.local
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: /ssl-config/gateway-cert.pem
            private_key:
              filename: /ssl-config/gateway-key.pem
          validation_context:
            trusted_ca:
              filename: /ssl-config/gateway-outgoing.pem
  - name: batch-driver
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: batch-driver
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: batch-driver.default.svc.cluster.local
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: /ssl-config/gateway-cert.pem
            private_key:
              filename: /ssl-config/gateway-key.pem
          validation_context:
            trusted_ca:
              filename: /ssl-config/gateway-outgoing.pem
  - name: grafana
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: grafana
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: grafana.default.svc.cluster.local
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: /ssl-config/gateway-cert.pem
            private_key:
              filename: /ssl-config/gateway-key.pem
          validation_context:
            trusted_ca:
              filename: /ssl-config/gateway-outgoing.pem
  - name: prometheus
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: prometheus
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: prometheus.default.svc.cluster.local
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: /ssl-config/gateway-cert.pem
            private_key:
              filename: /ssl-config/gateway-key.pem
          validation_context:
            trusted_ca:
              filename: /ssl-config/gateway-outgoing.pem
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 8001
layered_runtime:
  layers:
  - name: static_layer_0
    static_layer:
      envoy:
        resource_limits:
          listener:
            example_listener_name:
              connection_limit: 10000
